--- a/index.html
+++ b/index.html
@@ -58,29 +58,42 @@
 			<div class="footernav">
 			<a href "#">
 			<img src= "images/profile.png">
-			<span class="cap">Profile</span>
+			<span class="cap">Design</span>
 			</div></a>
 			
 			<div class="footernav">
 			<a href "#">
-			<img src= "images/Code.png">
-			<span class="cap">My Mock up </span>
+			<img src= "images/profile.png">
+			<span class="cap">Design</span>
 			</div></a>
 			
 			<div class="footernav">
 			<a href "#">
-			<img src= "images/Code.png">
+			<img src= "images/profile.png">
 			<span class="cap"> Design</span></a>
 			</div>
+			
+			<div class="footernav">
+			<a href "#">
+			<img src= "images/profile.png">
+			<span class="cap"> Design</span></a>
+			</div>
+			
 			</div>	
 		
 
 		
 			<div class="subfooter">
-			<a href "#">
-			<img src="images/fb.png">
-			</a>
-			<span class= "all"> All rights reserved ®</span></div>
+			
+			<div id="sub2">
+			<img class="top" src="images/dri.png">
+			<img class="bot" src="images/dr.png">
+			</div>
+			<!------------------------------ HOVER ------------------------------>
+			
+			
+			<span class= "all"> All rights reserved ®</span>
+				</div>
 
 </div>
 
