--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 			<body>
 			
-			<div class="container">
+<div class="container">
 
 			<div class ="headers">
 				
@@ -14,8 +14,8 @@
 				<div id="nav">
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Sources</a></li>
+					<li><a href="#">My Sample Work</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 				</div>
@@ -55,47 +55,51 @@
 <!------------------------------ footer ------------------------------>
 			<div class="footer">
 			
-			<div class="footernav">
+			<div class="footernav" >
 			<a href "#">
 			<img src= "images/profile.png">
-			<span class="cap">Design</span>
-			</div></a>
+			<span class="cap">Design</span></a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida tincidunt
+				libero non dictum. Maecenas eros est, tempor sit amet scelerisque ac, posuere non 
+				urna.Etiam tristique nulla vitae felis eleifend, quis tincidunt dolor aliquet. Integer 
+				</p>
+			</div>
 			
 			<div class="footernav">
 			<a href "#">
-			<img src= "images/profile.png">
-			<span class="cap">Design</span>
-			</div></a>
-			
-			<div class="footernav">
-			<a href "#">
-			<img src= "images/profile.png">
-			<span class="cap"> Design</span></a>
+			<img src= "images/code.png">
+			<span class="cap">Design</span></a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida tincidunt
+				libero non dictum. Maecenas eros est, tempor sit amet scelerisque ac, posuere non 
+				urna.Etiam tristique nulla vitae felis eleifend, quis tincidunt dolor aliquet. Integer 
+				</p>
 			</div>
 			
 			<div class="footernav">
 			<a href "#">
 			<img src= "images/profile.png">
 			<span class="cap"> Design</span></a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida tincidunt
+				libero non dictum. Maecenas eros est, tempor sit amet scelerisque ac, posuere non 
+				urna.Etiam tristique nulla vitae felis eleifend, quis tincidunt dolor aliquet. Integer 
+				</p>
 			</div>
 			
-			</div>	
-		
-
-		
+			</div>
+			
 			<div class="subfooter">
 			
-			<div id="sub2">
-			<img class="top" src="images/dri.png">
-			<img class="bot" src="images/dr.png">
+			<div class="icon">
+			<h2>Follow Us</h2>
+			<ul id="follow">
+			<li><a href="#"> <img src="images/1fb.png" class="fb"></a></li> 
+			<li><a href="#"> <img src="images/twi.png" class="twi"></a></li>
+			<li><a href="#"> <img src="images/ins.png" class="ins"></a></li>
+			<li><a href="#"> <img src="images/dri.png" class="dri"></a> </li> 
 			</div>
-			<!------------------------------ HOVER ------------------------------>
-			
-			
+		
 			<span class= "all"> All rights reserved ®</span>
-				</div>
-
+			</div>	
 </div>
-
 </body>
 </html>
